--- a/bingbu.ipynb
+++ b/bingbu.ipynb
@@ -6,16 +6,12 @@
       "name": "bingbu.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "7RsevYNwb_Gn",
         "3m2v9aTkdP7R",
         "PcGtNpJQduFD",
         "pY8U5E4dd2Ab",
-        "am3XtHUkfYl7",
-        "U2o5_3JIlQK9",
-        "PGkAj0vSVmKp",
-        "3llh1fzEVsDJ"
+        "PGkAj0vSVmKp"
       ],
-      "authorship_tag": "ABX9TyNr+8BBRO4du7gZZLO53yCd",
+      "authorship_tag": "ABX9TyPrY864P+m9AsiiAu24pv+m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +56,7 @@
         "import numpy as np\n",
         "from scipy.stats import shapiro, mannwhitneyu, ttest_ind"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -90,7 +86,7 @@
         "      print(f'Normalverteilung\\nDaten sind nicht unterschiedlich\\nshapiro P-Wert = {round(p,3)}, T-Test P-wert = {round(p2,3)}')\n",
         "    "
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -124,7 +120,6 @@
         "  Eshapiro = [(((np.array(df['Messungen LPl']['E'])-np.array(df['Messungen Blindwert']['E']))-0.0068)/0.054)*df['VF']['E'],'E']\n",
         "  for x,y in combinations([unbshapiro,Ushapiro,UEshapiro,Eshapiro],2):\n",
         "    print(f'\\nVergleich von {x[1]} und {y[1]}:')\n",
-        "    print(x[0],y[0])\n",
         "    datenvergleich(x[0],y[0])\n",
         "  for col in ['Messungen Blindwert','Messungen LPl']:\n",
         "    for index, row in df.iterrows():\n",
@@ -133,7 +128,7 @@
         "  df.to_excel('Proteinanalyse.xlsx')\n",
         "  fig.savefig('Proteinplot')"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -162,7 +157,6 @@
         "  for index, row in df.iterrows():\n",
         "    d[index] = list((((np.array(df['Messungen LPl'][index])-np.array(df['Messungen Blindwert'][index]))-0.0068)/0.054)*df['VF'][index])\n",
         "  \n",
-        "  print([key for key in d])\n",
         "  for x,y in combinations([key for key in d],2):\n",
         "    print(f'\\nVergleich von {x} und {y}:')\n",
         "    datenvergleich(d[x],d[y])\n",
@@ -173,7 +167,7 @@
         "  df.to_excel('Proteinanalysecustom.xlsx')\n",
         "  fig.savefig('Proteincustomplot')"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -193,6 +187,9 @@
         "  df['Transmission% BW mean'] = (10**-df['BW mean'])*100\n",
         "  df['Transmission Effektiv%'] = (df['Transmission% LPl mean']/df['Transmission% BW mean'])*100\n",
         "  df['Trübung%'] = 100 - df['Transmission Effektiv%']\n",
+        "  for x,y in combinations([(unb2,'unb'),(u2,'u'),(ue2,'ue'),(e2,'e')],2):\n",
+        "    print(f'\\nVergleich von {x[1]} und {y[1]}:')\n",
+        "    datenvergleich(x[0],y[0])\n",
         "  fig = plt.figure(figsize=(10,7))\n",
         "  ax = df['Trübung%'].plot(kind='bar')\n",
         "  plt.title('Trübung%')\n",
@@ -204,7 +201,7 @@
         "  df.to_excel('Trübung.xlsx')\n",
         "  fig.savefig('Trübungsplot')"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -228,13 +225,16 @@
         "  plt.title('Trübung%')\n",
         "  for p in ax.patches:\n",
         "    ax.annotate('{:.2f}'.format(round(p.get_height(),2))+'%', (p.get_x()+0.13, p.get_height() +0.2))\n",
+        "  for x,y in combinations(range(len(LPl)),2):\n",
+        "    print(f'\\nVergleich von {names[x]} und {names[y]}:')\n",
+        "    datenvergleich(LPl[x],LPl[y])\n",
         "  for col in ['Absorbtion Blindwert','Absorbtion LPl']:\n",
         "    for index, row in df.iterrows():\n",
         "      df[col][index] = '  '.join([str(n) for n in df[col][index]]).replace('.',',')\n",
         "  df.to_excel('Trübungcustom.xlsx')\n",
         "  fig.savefig('Trübungcustomplot')"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -273,7 +273,7 @@
         "def Zeta(Daten,names):\n",
         "  dataframer(Daten,names,title='Zetapotential',saveplot='Zetapotentialplot',savexlsx='Zetapotential')"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -539,10 +539,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 517
+          "height": 1000
         },
         "id": "9ESVaqUnPTdq",
-        "outputId": "4a50d8c9-d163-4d46-bfb5-e709a6ef2345"
+        "outputId": "c1220c8b-5cdc-4742-d290-4f33e8af1460"
       },
       "source": [
         "BWUNB=[0.057,0.058,0.056]\n",
@@ -563,13 +563,49 @@
         "        e2=LPE,\n",
         "        vf=VF)"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Vergleich von unb und u:\n",
+            "keine Normalverteilung\n",
+            "Daten sind unterschiedlich\n",
+            "shapiro P-Wert = -0.0, U-Test P-wert = 0.03\n",
+            "\n",
+            "Vergleich von unb und ue:\n",
+            "Normalverteilung\n",
+            "Daten sind unterschiedlich\n",
+            "shapiro P-Wert = 1.0, T-Test P-wert = 0.0\n",
+            "\n",
+            "Vergleich von unb und e:\n",
+            "keine Normalverteilung\n",
+            "Daten sind unterschiedlich\n",
+            "shapiro P-Wert = 0.02, U-Test P-wert = 0.036\n",
+            "\n",
+            "Vergleich von u und ue:\n",
+            "keine Normalverteilung\n",
+            "Daten sind unterschiedlich\n",
+            "shapiro P-Wert = -0.0, U-Test P-wert = 0.03\n",
+            "\n",
+            "Vergleich von u und e:\n",
+            "keine Normalverteilung\n",
+            "Daten sind nicht unterschiedlich\n",
+            "shapiro P-Wert = -0.0, U-Test P-wert = 0.319\n",
+            "\n",
+            "Vergleich von ue und e:\n",
+            "keine Normalverteilung\n",
+            "Daten sind nicht unterschiedlich\n",
+            "shapiro P-Wert = -0.0, U-Test P-wert = 0.151\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:19: SettingWithCopyWarning: \n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:22: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
@@ -604,9 +640,9 @@
         "id": "-_efcRBQfH9R",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 525
+          "height": 620
         },
-        "outputId": "15cf0aa7-4fe5-488e-d11e-2403d58d19ea"
+        "outputId": "062fc4ad-0024-4243-9ada-87ec0cd96459"
       },
       "source": [
         "UE1410BW = [0.148,0.146,0.146]\n",
@@ -622,13 +658,24 @@
         "      names = datennamen,\n",
         "      vf = VF)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Vergleich von 14.7. und 10.7.:\n",
+            "keine Normalverteilung\n",
+            "Daten sind nicht unterschiedlich\n",
+            "shapiro P-Wert = 0.004, U-Test P-wert = 0.407\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:18: SettingWithCopyWarning: \n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:21: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
@@ -814,6 +861,85 @@
       "cell_type": "code",
       "metadata": {
         "id": "svZQAXwSVc2h"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uEUWIceYeoOg",
+        "outputId": "155c53b6-4505-489e-fa0c-32b277119465"
+      },
+      "source": [
+        "for i,w in combinations(range(10),2):\n",
+        "  print(i)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "0\n",
+            "0\n",
+            "0\n",
+            "0\n",
+            "0\n",
+            "0\n",
+            "0\n",
+            "0\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "1\n",
+            "2\n",
+            "2\n",
+            "2\n",
+            "2\n",
+            "2\n",
+            "2\n",
+            "2\n",
+            "3\n",
+            "3\n",
+            "3\n",
+            "3\n",
+            "3\n",
+            "3\n",
+            "4\n",
+            "4\n",
+            "4\n",
+            "4\n",
+            "4\n",
+            "5\n",
+            "5\n",
+            "5\n",
+            "5\n",
+            "6\n",
+            "6\n",
+            "6\n",
+            "7\n",
+            "7\n",
+            "8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UocAZeDhe471"
       },
       "source": [
         ""
