--- a/bingbu.ipynb
+++ b/bingbu.ipynb
@@ -6,12 +6,12 @@
       "name": "bingbu.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "3m2v9aTkdP7R",
         "PcGtNpJQduFD",
         "pY8U5E4dd2Ab",
+        "am3XtHUkfYl7",
         "PGkAj0vSVmKp"
       ],
-      "authorship_tag": "ABX9TyPrY864P+m9AsiiAu24pv+m",
+      "authorship_tag": "ABX9TyMg51Hk+u+IeZxRfImCg+54",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "import numpy as np\n",
         "from scipy.stats import shapiro, mannwhitneyu, ttest_ind"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -86,7 +86,21 @@
         "      print(f'Normalverteilung\\nDaten sind nicht unterschiedlich\\nshapiro P-Wert = {round(p,3)}, T-Test P-wert = {round(p2,3)}')\n",
         "    "
       ],
-      "execution_count": 2,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fGFVMnX8kko2"
+      },
+      "source": [
+        "def shapirotests(daten,names):\n",
+        "  for x,y in combinations(range(len(daten)),2):\n",
+        "    print(f'\\nVergleich von {names[x]} und {names[y]}:')\n",
+        "    datenvergleich(daten[x],daten[y])"
+      ],
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -128,7 +142,7 @@
         "  df.to_excel('Proteinanalyse.xlsx')\n",
         "  fig.savefig('Proteinplot')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -167,7 +181,7 @@
         "  df.to_excel('Proteinanalysecustom.xlsx')\n",
         "  fig.savefig('Proteincustomplot')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -201,7 +215,7 @@
         "  df.to_excel('Trübung.xlsx')\n",
         "  fig.savefig('Trübungsplot')"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -234,7 +248,7 @@
         "  df.to_excel('Trübungcustom.xlsx')\n",
         "  fig.savefig('Trübungcustomplot')"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -273,7 +287,7 @@
         "def Zeta(Daten,names):\n",
         "  dataframer(Daten,names,title='Zetapotential',saveplot='Zetapotentialplot',savexlsx='Zetapotential')"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -319,6 +333,58 @@
             "keine Normalverteilung\n",
             "Daten sind unterschiedlich\n",
             "shapiro P-Wert = 0.035, U-Test P-wert = 0.03\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7qga4v8uj9eS"
+      },
+      "source": [
+        "## Shapiro mit mehr als 2 Datensätzen"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q4jSNuRyj-tP",
+        "outputId": "7cc35524-78c3-4cac-a160-015745a38406"
+      },
+      "source": [
+        "q = [1,2,3]\n",
+        "w = [2,3,4]\n",
+        "e = [3,4,5]\n",
+        "daten = [q,w,e]\n",
+        "datennamen = ['q','w','e']\n",
+        "\n",
+        "shapirotests(daten,datennamen)"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Vergleich von q und w:\n",
+            "Normalverteilung\n",
+            "Daten sind nicht unterschiedlich\n",
+            "shapiro P-Wert = 0.82, T-Test P-wert = 0.288\n",
+            "\n",
+            "Vergleich von q und e:\n",
+            "Normalverteilung\n",
+            "Daten sind nicht unterschiedlich\n",
+            "shapiro P-Wert = 0.96, T-Test P-wert = 0.07\n",
+            "\n",
+            "Vergleich von w und e:\n",
+            "Normalverteilung\n",
+            "Daten sind nicht unterschiedlich\n",
+            "shapiro P-Wert = 0.82, T-Test P-wert = 0.288\n"
           ]
         }
       ]
@@ -563,7 +629,7 @@
         "        e2=LPE,\n",
         "        vf=VF)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -658,7 +724,7 @@
         "      names = datennamen,\n",
         "      vf = VF)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -881,7 +947,7 @@
         "for i,w in combinations(range(10),2):\n",
         "  print(i)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
