--- a/bingbu.ipynb
+++ b/bingbu.ipynb
@@ -11,7 +11,7 @@
         "am3XtHUkfYl7",
         "PGkAj0vSVmKp"
       ],
-      "authorship_tag": "ABX9TyMg51Hk+u+IeZxRfImCg+54",
+      "authorship_tag": "ABX9TyMcMZtr2lkAIHoUe2E2jPPf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -100,7 +100,7 @@
         "    print(f'\\nVergleich von {names[x]} und {names[y]}:')\n",
         "    datenvergleich(daten[x],daten[y])"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -166,7 +166,7 @@
         "  plt.title('Proteingehalt %')\n",
         "  for p in ax.patches:\n",
         "    ax.annotate('{:.2f}'.format(round(p.get_height(),2))+'%', (p.get_x()+0.13, p.get_height() +0.2))\n",
-        "  print(df.T)\n",
+        "\n",
         "  d = {}\n",
         "  for index, row in df.iterrows():\n",
         "    d[index] = list((((np.array(df['Messungen LPl'][index])-np.array(df['Messungen Blindwert'][index]))-0.0068)/0.054)*df['VF'][index])\n",
@@ -199,9 +199,11 @@
         "  df['Transmission% LPl mean'] = (10**-df['LPl mean'])*100\n",
         "  df['Transmission% BW'] = (10**-df['Absorbtion Blindwert'])*100\n",
         "  df['Transmission% BW mean'] = (10**-df['BW mean'])*100\n",
-        "  df['Transmission Effektiv%'] = (df['Transmission% LPl mean']/df['Transmission% BW mean'])*100\n",
-        "  df['Trübung%'] = 100 - df['Transmission Effektiv%']\n",
-        "  for x,y in combinations([(unb2,'unb'),(u2,'u'),(ue2,'ue'),(e2,'e')],2):\n",
+        "  df['Transmission Effektiv%'] = (df['Transmission% LPl']/df['Transmission% BW'])*100\n",
+        "  df['Transmission Effektiv% mean'] = (df['Transmission% LPl mean']/df['Transmission% BW mean'])*100\n",
+        "  df['Trübung%'] = 100 - df['Transmission Effektiv% mean']\n",
+        "\n",
+        "  for x,y in combinations([(df['Transmission Effektiv%']['unb'],'unb'),(df['Transmission Effektiv%']['U'],'U'),(df['Transmission Effektiv%']['UE'],'UE'),(df['Transmission Effektiv%']['E'],'E')],2):\n",
         "    print(f'\\nVergleich von {x[1]} und {y[1]}:')\n",
         "    datenvergleich(x[0],y[0])\n",
         "  fig = plt.figure(figsize=(10,7))\n",
@@ -209,7 +211,7 @@
         "  plt.title('Trübung%')\n",
         "  for p in ax.patches:\n",
         "    ax.annotate('{:.2f}'.format(round(p.get_height(),2))+'%', (p.get_x()+0.13, p.get_height() +0.2))\n",
-        "  for col in ['Absorbtion Blindwert','Absorbtion LPl']:\n",
+        "  for col in ['Absorbtion Blindwert','Absorbtion LPl','Transmission% BW','Transmission% LPl','Transmission Effektiv%']:\n",
         "    for index, row in df.iterrows():\n",
         "      df[col][index] = '  '.join([str(n) for n in df[col][index]]).replace('.',',')\n",
         "  df.to_excel('Trübung.xlsx')\n",
@@ -232,17 +234,20 @@
         "  df['Transmission% LPl mean'] = (10**-df['LPl mean'])*100\n",
         "  df['Transmission% BW'] = (10**-df['Absorbtion Blindwert'])*100\n",
         "  df['Transmission% BW mean'] = (10**-df['BW mean'])*100\n",
-        "  df['Transmission Effektiv%'] = (df['Transmission% LPl mean']/df['Transmission% BW mean'])*100\n",
-        "  df['Trübung%'] = 100 - df['Transmission Effektiv%']\n",
+        "  df['Transmission Effektiv%'] = (df['Transmission% LPl']/df['Transmission% BW'])*100\n",
+        "  df['Transmission Effektiv% mean'] = (df['Transmission% LPl mean']/df['Transmission% BW mean'])*100\n",
+        "  df['Trübung%'] = 100 - df['Transmission Effektiv% mean']\n",
         "  fig = plt.figure(figsize=(10,7))\n",
         "  ax = df['Trübung%'].plot(kind='bar')\n",
         "  plt.title('Trübung%')\n",
         "  for p in ax.patches:\n",
         "    ax.annotate('{:.2f}'.format(round(p.get_height(),2))+'%', (p.get_x()+0.13, p.get_height() +0.2))\n",
-        "  for x,y in combinations(range(len(LPl)),2):\n",
-        "    print(f'\\nVergleich von {names[x]} und {names[y]}:')\n",
-        "    datenvergleich(LPl[x],LPl[y])\n",
-        "  for col in ['Absorbtion Blindwert','Absorbtion LPl']:\n",
+        "  records = df[['Transmission Effektiv%']].to_records(index=True)\n",
+        "  print(records)\n",
+        "  for x,y in combinations(records,2):\n",
+        "    print(f'\\nVergleich von {x[0]} und {y[0]}:')\n",
+        "    datenvergleich(x[1],y[1])\n",
+        "  for col in ['Absorbtion Blindwert','Absorbtion LPl','Transmission% BW','Transmission% LPl','Transmission Effektiv%']:\n",
         "    for index, row in df.iterrows():\n",
         "      df[col][index] = '  '.join([str(n) for n in df[col][index]]).replace('.',',')\n",
         "  df.to_excel('Trübungcustom.xlsx')\n",
@@ -364,7 +369,7 @@
         "\n",
         "shapirotests(daten,datennamen)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -406,7 +411,7 @@
           "height": 1000
         },
         "id": "hVGU_pNePA7z",
-        "outputId": "39081b4e-722a-4160-d9a6-4f24ccd07731"
+        "outputId": "8628e94c-df74-490d-8570-ac72703af1bb"
       },
       "source": [
         "# Blindwerte (unb = unbehandelt, U = Ultraschall, UE = Ultraschall+erhitzt, E = erhitzt)\n",
@@ -485,7 +490,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:30: SettingWithCopyWarning: \n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:29: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
@@ -608,7 +613,7 @@
           "height": 1000
         },
         "id": "9ESVaqUnPTdq",
-        "outputId": "c1220c8b-5cdc-4742-d290-4f33e8af1460"
+        "outputId": "627fdf48-6abb-453e-ede3-df386b877c4c"
       },
       "source": [
         "BWUNB=[0.057,0.058,0.056]\n",
@@ -619,6 +624,7 @@
         "LPU=[0.145,0.145,0.145]\n",
         "LPUE=[0.184,0.183,0.183]\n",
         "LPE=[0.099,0.183,0.183]\n",
+        "VF = 15\n",
         "Trübungvoll(unb=BWUNB,\n",
         "        u=BWU,\n",
         "        ue=BWUE,\n",
@@ -636,42 +642,42 @@
           "name": "stdout",
           "text": [
             "\n",
-            "Vergleich von unb und u:\n",
-            "keine Normalverteilung\n",
-            "Daten sind unterschiedlich\n",
-            "shapiro P-Wert = -0.0, U-Test P-wert = 0.03\n",
-            "\n",
-            "Vergleich von unb und ue:\n",
+            "Vergleich von unb und U:\n",
             "Normalverteilung\n",
             "Daten sind unterschiedlich\n",
-            "shapiro P-Wert = 1.0, T-Test P-wert = 0.0\n",
+            "shapiro P-Wert = 0.083, T-Test P-wert = 0.0\n",
             "\n",
-            "Vergleich von unb und e:\n",
+            "Vergleich von unb und UE:\n",
             "keine Normalverteilung\n",
             "Daten sind unterschiedlich\n",
-            "shapiro P-Wert = 0.02, U-Test P-wert = 0.036\n",
+            "shapiro P-Wert = -0.0, U-Test P-wert = 0.04\n",
             "\n",
-            "Vergleich von u und ue:\n",
-            "keine Normalverteilung\n",
+            "Vergleich von unb und E:\n",
+            "Normalverteilung\n",
+            "Daten sind nicht unterschiedlich\n",
+            "shapiro P-Wert = 0.05, T-Test P-wert = 0.064\n",
+            "\n",
+            "Vergleich von U und UE:\n",
+            "Normalverteilung\n",
             "Daten sind unterschiedlich\n",
-            "shapiro P-Wert = -0.0, U-Test P-wert = 0.03\n",
+            "shapiro P-Wert = 0.521, T-Test P-wert = 0.0\n",
             "\n",
-            "Vergleich von u und e:\n",
+            "Vergleich von U und E:\n",
+            "Normalverteilung\n",
+            "Daten sind nicht unterschiedlich\n",
+            "shapiro P-Wert = 0.153, T-Test P-wert = 0.786\n",
+            "\n",
+            "Vergleich von UE und E:\n",
             "keine Normalverteilung\n",
             "Daten sind nicht unterschiedlich\n",
-            "shapiro P-Wert = -0.0, U-Test P-wert = 0.319\n",
-            "\n",
-            "Vergleich von ue und e:\n",
-            "keine Normalverteilung\n",
-            "Daten sind nicht unterschiedlich\n",
-            "shapiro P-Wert = -0.0, U-Test P-wert = 0.151\n"
+            "shapiro P-Wert = 0.037, U-Test P-wert = 0.331\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:22: SettingWithCopyWarning: \n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:24: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
@@ -706,9 +712,9 @@
         "id": "-_efcRBQfH9R",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 620
+          "height": 675
         },
-        "outputId": "062fc4ad-0024-4243-9ada-87ec0cd96459"
+        "outputId": "d8c32e1e-407b-42a7-e442-7437613e52ca"
       },
       "source": [
         "UE1410BW = [0.148,0.146,0.146]\n",
@@ -730,18 +736,20 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "[('14.7.', array([63.24118514, 62.66138647, 62.66138647]))\n",
+            " ('10.7.', array([61.94410751, 63.24118514, 63.53309319]))]\n",
             "\n",
             "Vergleich von 14.7. und 10.7.:\n",
-            "keine Normalverteilung\n",
+            "Normalverteilung\n",
             "Daten sind nicht unterschiedlich\n",
-            "shapiro P-Wert = 0.004, U-Test P-wert = 0.407\n"
+            "shapiro P-Wert = 0.544, T-Test P-wert = 0.927\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:21: SettingWithCopyWarning: \n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:24: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
@@ -933,74 +941,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "uEUWIceYeoOg",
-        "outputId": "155c53b6-4505-489e-fa0c-32b277119465"
-      },
-      "source": [
-        "for i,w in combinations(range(10),2):\n",
-        "  print(i)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n",
-            "0\n",
-            "0\n",
-            "0\n",
-            "0\n",
-            "0\n",
-            "0\n",
-            "0\n",
-            "0\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "1\n",
-            "2\n",
-            "2\n",
-            "2\n",
-            "2\n",
-            "2\n",
-            "2\n",
-            "2\n",
-            "3\n",
-            "3\n",
-            "3\n",
-            "3\n",
-            "3\n",
-            "3\n",
-            "4\n",
-            "4\n",
-            "4\n",
-            "4\n",
-            "4\n",
-            "5\n",
-            "5\n",
-            "5\n",
-            "5\n",
-            "6\n",
-            "6\n",
-            "6\n",
-            "7\n",
-            "7\n",
-            "8\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
