--- a/LoLPredict.ipynb
+++ b/LoLPredict.ipynb
@@ -19,6 +19,10 @@
     "import cassiopeia as cass\n",
     "from cassiopeia.core import Summoner, MatchHistory, Match\n",
     "from cassiopeia import Queue, Patch\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "from tensorflow.keras import layers\n",
     "cass.set_riot_api_key(\"\") # Riot API key: https://developer.riotgames.com/"
    ]
   },
@@ -122,19 +126,6 @@
     "        print(match.queue)\n",
     "\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f038434b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import tensorflow as tf\n",
-    "from tensorflow import keras\n",
-    "from tensorflow.keras import layers"
    ]
   },
   {
@@ -249,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit(x=[blue_train,red_train], y=y_train,steps_per_epoch=len(blue_train) ,validation_data=([blue_test,red_test],y_test),epochs=30,validation_steps=len(blue_test))"
+    "model.fit(x=[blue_train,red_train], y=y_train,steps_per_epoch=len(blue_train), validation_data=([blue_test,red_test],y_test),epochs=30,validation_steps=len(blue_test))"
    ]
   },
   {
@@ -283,6 +274,14 @@
     "y = y_test.numpy()\n",
     "preds = np.squeeze(preds)\n",
     "print(abs(preds-y).mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fee3bb8a",
+   "metadata": {},
+   "source": [
+    "Trained on 5000 games, we reach around 52% prediction accuracy. As match results aren't purely determined by champion picks there is a limit to how accurate the model can become. Our next step is to increase train data size and see whether this improves accuracy."
    ]
   }
  ],
